--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "badyet is also know as budget. badyet is an app that tracks expenses and income.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon app.js"
   },
   "repository": {
@@ -31,6 +31,7 @@
     "mysql2": "^1.6.5"
   },
   "devDependencies": {
+    "jest": "^24.8.0",
     "nodemon": "^1.19.0"
   }
 }
