--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "connect-session-sequelize": "^6.0.0",
     "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
@@ -28,7 +29,8 @@
     "express-mysql-session": "^2.1.0",
     "express-session": "^1.16.1",
     "jquery": "^3.4.1",
-    "mysql2": "^1.6.5"
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.8.6"
   },
   "devDependencies": {
     "jest": "^24.8.0",
