refractor front end

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "express-mysql-session": "^2.1.0",
     "express-session": "^1.16.1",
     "jquery": "^3.4.1",
+    "jquery-datepicker": "^1.12.3",
     "mysql2": "^1.6.5",
+    "popper.js": "^1.15.0",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
